test/frontend/fail/no_viable_candidate.osl
void foo() {}
string foo() { return "abcd"; }

shader bar() {
    vector v = foo();
}
